<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/itemRecycler"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="1dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/frameValute"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textCurrencyCharCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:text="EUR"
                android:layout_gravity="center"
                app:layout_constraintStart_toEndOf="@+id/frameValute"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textCurrencyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/test_text_currensy_name"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/textCurrencyValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/frameValute"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/nominal"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@+id/frameValute"
            app:layout_constraintTop_toBottomOf="@+id/textCurrencyName" />

        <TextView
            android:id="@+id/textCurrencyNominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/nominal_example"
            app:layout_constraintStart_toEndOf="@+id/data_text"
            app:layout_constraintTop_toBottomOf="@+id/textCurrencyName" />

        <TextView
            android:id="@+id/textCurrencyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/value_example"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/framePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCurrencyValue"
            android:gravity="center"
            android:paddingHorizontal="4dp">
            <ImageView
                android:id="@+id/imageArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_drop_down_24" />
            <TextView
                android:id="@+id/textCurrencyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:text="@string/percent_example" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>